@startuml

title __EXTRA's Class Diagram__\n

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.extra {
      class MapsActivity {
          - mFusedLocationClient : FusedLocationProviderClient
          - mMap : GoogleMap
          {static} - TAG : String
          {static} - FINE_LOCATION : String
          {static} - COARSE_LOCATION : String
          {static} - LOCATION_PERMISSION_REQUEST_CODE : int
          {static} - DEFAULT_ZOOM : float
          - mLocationPermissionsGranted : Boolean
          # onCreate()
          + onMapReady()
          - getLocationPerms()
          - getDeviceLocation()
          - moveCamera()
          + onRequestPermissionsResult()
      }
    }
  }
  

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.extra {
      class oldLoginActivity {
          {static} + TAG : String
          {static} - ERROR_DIALOG_REQUEST : int
          {static} - SIGN_IN : int
          - mGoogle : GoogleSignInClient
          - mAuth : FirebaseAuth
          - googleButton : SignInButton
          - emailEditText : EditText
          - passwordEditText : EditText
          - confirm_email : EditText
          - confirm_password : EditText
          - btnLogin : Button
          - txtRegister : TextView
          - txtLogin : TextView
          - showPassword : CheckBox
          # onCreate()
          # onStart()
          + createRegisterForm()
          + loadMain()
          + loginUser()
          - googleSignIn()
          + onActivityResult()
          - handleSignInResult()
          - firebaseAuthWithGoogle()
          + isServicesOk()
          - customButtonUI()
          + initializeViews()
          + setOnClickListeners()
          + onClick()
          + showPassword()
      }
    }
  }
  

  MapsActivity -up-|> OnMapReadyCallback
  MapsActivity -up-|> FragmentActivity
  HostCallbacks -up-|> FragmentHostCallback
  oldLoginActivity -up-|> OnClickListener
  oldLoginActivity -up-|> AppCompatActivity
  oldLoginActivity o-- LoginViewModel : loginViewModel
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
